// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JIRA wiki markup - Text [ADFS-725] should strip null chars 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "Hello  World!",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text [ESS-2539] shoudld create new paragraph after two consecutive new lines 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "line 1 ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "line 2",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text [ESS-2539] shoudld keep text after multiple force line breaks in same paragraph 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "line1",
          "type": "text",
        },
        {
          "attrs": {
            "localId": null,
            "text": "
",
          },
          "type": "hardBreak",
        },
        {
          "attrs": {
            "localId": null,
            "text": "
",
          },
          "type": "hardBreak",
        },
        {
          "attrs": {
            "localId": null,
            "text": "
",
          },
          "type": "hardBreak",
        },
        {
          "text": "line2",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text [EX-500] should handle escape correctly 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "* \\m",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text leading double dashes is not list 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "– This is not a list",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text leading triple dashes is not list 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "— This is not a list",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text multiple - should be rendered as plain text 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "------------- ---------------- ------------------",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text should ignore leading spaces on each line 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "foo",
          "type": "text",
        },
        {
          "attrs": {
            "localId": null,
            "text": "
",
          },
          "type": "hardBreak",
        },
        {
          "text": "bar",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text should render empty paragraph if no content 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text should render simple text as a paragraph 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "foo bar",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text should replace four dashes with a ruler + ignore four dashes in a line of text 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This is a text with ---- in it",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "localId": null,
      },
      "type": "rule",
    },
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This is a text",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text should respect \\ as a line break 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "foo ",
          "type": "text",
        },
        {
          "attrs": {
            "localId": null,
            "text": "
",
          },
          "type": "hardBreak",
        },
        {
          "text": " bar",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text should respect \\\\ as a line break 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "foo ",
          "type": "text",
        },
        {
          "attrs": {
            "localId": null,
            "text": "
",
          },
          "type": "hardBreak",
        },
        {
          "text": " bar",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text should treat \\ as a charater if it's not applied with any keyword 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "\\foobar",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text should treat ignored keyword as plantext 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "{ foobar",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;
